# p2p-file-sharing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dashboard.py
include/: choke_manager.h  handshake_manager.h  packet.h  peer_session_manager.h  piece_manager.h  reliable_socket.h  socket_manager.h
src/: handshake_manager.cpp  main.cpp  packet.cpp  peer_session_manager.cpp  piece_manager.cpp  reliable_socket.cpp  socket_manager.cpp
